Edit footer copyright

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -31,7 +31,7 @@ html
       .clearfix
         footer
           .container-fluid
-            p.copyright © 2017 RPiMonSys. All Rights Reserved.
+            p.copyright &copy; 2017 RPiMonSys. All Rights Reserved.
 
     // END WRAPPER
     // Javascript
