--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -13,7 +13,7 @@ html
     // MAIN CSS
     link(rel='stylesheet', href='../public/stylesheets/main.css')
     // GOOGLE FONTS
-    link(href='https://fonts.googleapis.com/stylesheets?family=Source+Sans+Pro:300,400,600,700', rel='stylesheet')
+    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700&amp;subset=vietnamese', rel='stylesheet')
     // ICONS
     link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
     link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
