--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -1,39 +1,54 @@
-<!-- NAVBAR -->
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="brand">
-        <a href="/"><img src="../public/images/RPiMonSysDarkLogo.png" alt="RPiMonSys Logo" class="img-responsive logo"></a>
-    </div>
-    <div class="container-fluid">
-        <div class="navbar-btn">
-            <button type="button" class="btn-toggle-fullwidth"><i class="lnr lnr-menu"></i></button>
-        </div>
-        <div id="navbar-menu">
-            <ul class="nav navbar-nav navbar-right">
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle icon-menu" data-toggle="dropdown">
-                        <i class="lnr lnr-alarm"></i>
-                    </a>
-                    <ul class="dropdown-menu notifications">
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>System space is almost full</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-danger"></span>You have 9 unfinished tasks</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Monthly report is available</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-warning"></span>Weekly meeting in 1 hour</a></li>
-                        <li><a href="#" class="notification-item"><span class="dot bg-success"></span>Your request has been approved</a></li>
-                        <li><a href="#" class="more">See all notifications</a></li>
-                    </ul>
-                </li>
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="../public/images/pic01.jpg" class="img-circle" alt="Avatar"> <span>Trần Anh Quốc</span> <i class="icon-submenu lnr lnr-chevron-down"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#"><i class="lnr lnr-user"></i> <span>My Profile</span></a></li>
-                        <li><a href="#"><i class="lnr lnr-cog"></i> <span>Preferences</span></a></li>
-                        <li><a href="#"><i class="lnr lnr-exit"></i> <span>Logout</span></a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<!-- END NAVBAR -->
+nav.navbar.navbar-default.navbar-fixed-top
+  .brand
+    a(href='/')
+      img.img-responsive.logo(src='../public/images/RPiMonSysDarkLogo.png', alt='RPiMonSys Logo')
+  .container-fluid
+    .navbar-btn
+      button.btn-toggle-fullwidth(type='button')
+        i.lnr.lnr-menu
+    #navbar-menu
+      ul.nav.navbar-nav.navbar-right
+        li.dropdown
+          a.dropdown-toggle.icon-menu(href='#', data-toggle='dropdown')
+            i.lnr.lnr-alarm
+          ul.dropdown-menu.notifications
+            li
+              a.notification-item(href='#')
+                span.dot.bg-warning
+                | System space is almost full
+            li
+              a.notification-item(href='#')
+                span.dot.bg-danger
+                | You have 9 unfinished tasks
+            li
+              a.notification-item(href='#')
+                span.dot.bg-success
+                | Monthly report is available
+            li
+              a.notification-item(href='#')
+                span.dot.bg-warning
+                | Weekly meeting in 1 hour
+            li
+              a.notification-item(href='#')
+                span.dot.bg-success
+                | Your request has been approved
+            li
+              a.more(href='#') See all notifications
+        li.dropdown
+          a.dropdown-toggle(href='#', data-toggle='dropdown')
+            img.img-circle(src='../public/images/pic01.jpg', alt='Avatar')
+            span Trần Anh Quốc
+            i.icon-submenu.lnr.lnr-chevron-down
+          ul.dropdown-menu
+            li
+              a(href='#')
+                i.lnr.lnr-user
+                span My Profile
+            li
+              a(href='#')
+                i.lnr.lnr-cog
+                span Preferences
+            li
+              a(href='#')
+                i.lnr.lnr-exit
+                span Logout
