Added sidebar nav

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -19,6 +19,9 @@ html
     link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
   body
     #wrapper
+      
+      block link
+          -var selected = 'dashboard'; //default
 
       include partials/nav.pug
           
