insert value into pug view

--- a/views/layouts/sysinfo/cpu.pug
+++ b/views/layouts/sysinfo/cpu.pug
@@ -19,13 +19,13 @@ block content
                   #cpu-usage-chart.ct-chart
                 .col-md-3
                   .weekly-summary.text-right.bottom
-                    span.number 203
+                    span#totalProcesses.number 203
                     span.info-label Processes
                   .weekly-summary.text-right.bottom
-                    span.number 16%
+                    span#cpuPercent.number 16%
                     span.info-label CPU Utilize
                   .weekly-summary.text-right.bottom
-                    span.number 4
+                    span#totalProcessors.number 4
                     span.info-label Logical Processors
               .row
                 .col-md-9
