--- a/views/layouts/partials/sidebar.pug
+++ b/views/layouts/partials/sidebar.pug
@@ -1,14 +1,11 @@
--var menu = [["Dashboard", "fa-dashboard", "/"],["System overview", "fa-desktop", "admin/overview"],["CPU", "fa-microchip", "/admin/cpu"], ["Memory", "fa-building-o", "admin/memory"], ["Disk", "fa-database", "admin/disk"], ["Filesystem", "fa-file", "admin/filesystem"], ["Linux packages", "fa-folder", "admin/filesystem"], ["Processes", "fa-cogs", "admin/processes"],]
-
-//- ["Title", "fa-icon", "link"]
 #sidebar-nav.sidebar
   .sidebar-scroll
     nav
       ul.nav
         each val, key in menu
-          if selected === key
-            li.active
-              a(href= val[2], title= val[0])
+          if selected === val[2]
+            li
+              a.active(href= val[2], title= val[0])
                 i.fa(class= val[1])
                 span #{val[0]}
           else
@@ -16,30 +13,16 @@
               a(href= val[2], title= val[0])
                 i.fa(class= val[1])
                 span #{val[0]}
-        li
-          a.collapsed(href='#subPages', data-toggle='collapse')
-            i.fa.fa-wifi
-            span Network
-            i.icon-submenu.lnr.lnr-chevron-left
-          #subPages.collapse
-            ul.nav
-              li
-                a(href='#') Interfaces
-              li
-                a(href='#') Connections
-              li
-                a(href='#') Traffics
-        li
-          a(href='#')
-            i.fa.fa-shield
-            span Linux Firewall
-        li.disabled
-          a
-            i.fa.fa-users
-            span System Users & Groups
-        li.disabled
-          a
-            i.fa.fa-terminal
-            span Web Terminal
-            span(style="font-size: .7em; margin-left: 10px;") Comming soon
-<!-- END LEFT SIDEBAR -->
+        //- li
+        //-   a.collapsed(href='#subPages', data-toggle='collapse')
+        //-     i.fa.fa-wifi
+        //-     span Network
+        //-     i.icon-submenu.lnr.lnr-chevron-left
+        //-   #subPages.collapse
+        //-     ul.nav
+        //-       li
+        //-         a(href='#') Interfaces
+        //-       li
+        //-         a(href='#') Connections
+        //-       li
+        //-         a(href='#') Traffics
