--- a/views/login.pug
+++ b/views/login.pug
@@ -1,21 +1,16 @@
 doctype html
-html
+html.fullscreen-bg(lang='en')
   head
     title #{title}
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0')
-    // VENDOR CSS
     link(rel='stylesheet', href='../public/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='../public/vendor/font-awesome/css/font-awesome.min.css')
     link(rel='stylesheet', href='../public/vendor/linearicons/style.css')
-    link(rel='stylesheet', href='../public/vendor/chartist/css/chartist-custom.css')
-    // MAIN CSS
     link(rel='stylesheet', href='../public/stylesheets/main.css')
-    // GOOGLE FONTS
-    link(href='https://fonts.googleapis.com/stylesheets?family=Source+Sans+Pro:300,400,600,700', rel='stylesheet')
-    // ICONS
-    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/favicon.png')
+    link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700', rel='stylesheet')    
+    link(rel='apple-touch-icon', sizes='76x76', href='../public/img/apple-icon.png')
     link(rel='icon', type='image/png', sizes='96x96', href='../public/img/favicon.png')
   body
     // WRAPPER
