--- a/views/layouts/sysinfo/cpu.pug
+++ b/views/layouts/sysinfo/cpu.pug
@@ -22,13 +22,13 @@ block content
                   #cpu-usage-chart.ct-chart
                 .col-md-3
                   .weekly-summary.text-right.bottom
-                    span#totalProcesses.number 203
+                    span#cpu-freq.number 800MHz
                     span.info-label Processes
                   .weekly-summary.text-right.bottom
-                    span#cpuPercent.number 16%
+                    span#cpu-percent.number 16%
                     span.info-label CPU Utilize
                   .weekly-summary.text-right.bottom
-                    span#totalProcessors.number 4
+                    span#total-processors.number 4
                     span.info-label Logical Processors
               .row
                 .col-md-9
