--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -19,14 +19,14 @@ block content
               .profile-stat
                 .row
                   .col-md-4.stat-item
-                    | 45 
-                    span Projects
+                    | #{activities.length} 
+                    span Activies
                   .col-md-4.stat-item
-                    | 15 
-                    span Awards
+                    | Joined on
+                    span #{user.CreatedAt}
                   .col-md-4.stat-item
-                    | 2174 
-                    span Points
+                    | Verified on 
+                    span #{user.VerifiedAt}
             // END PROFILE HEADER
             // PROFILE DETAIL
             .profile-detail
@@ -52,7 +52,7 @@ block content
                 h4.heading About
                 p #{user.Bio}
               .text-center
-                a.btn.btn-primary(href='#') Edit Profile
+                a.btn.btn-primary(href='/profile/edit/#{user.Username}') Edit Profile
             // END PROFILE DETAIL
           // END LEFT COLUMN
           // RIGHT COLUMN
@@ -76,49 +76,48 @@ block content
                 .col-md-3.col-sm-6
                   .award-item
                     .hexagon
-                      span.fa.fa-user-o.award-icon
+                      span.fa.fa-edit.award-icon
                     span
-                      a(href='#') Add users
+                      a(href='/profile/edit/#{user.Username}') Edit profile
             // END AWARDS
             // TABBED CONTENT
             .custom-tabs-line.tabs-line-bottom.left-aligned
               ul.nav(role='tablist')
                 li.active
-                  a(href='#tab-bottom-left1', role='tab', data-toggle='tab') Recent Activity
+                  a(href='#tab-bottom-left1', role='tab', data-toggle='tab') Your First Activities
             .tab-content
               #tab-bottom-left1.tab-pane.fade.in.active
                 ul.list-unstyled.activity-timeline
                   li
                     i.fa.fa-comment.activity-icon
                     p
-                      | Commented on post 
-                      a(href='#') Prototyping
-                      span.timestamp 2 minutes ago
+                      | You have visited 
+                      a(href='/admin') Dashboard
+                      | for the first time at
+                      a #{user.FirstVisited}
+                      span.timeago.timestamp(datetime='#{user.FirstVisited}')
                   li
                     i.fa.fa-cloud-upload.activity-icon
                     p
-                      | Uploaded new file 
-                      a(href='#') Proposal.docx
-                      |  to project 
-                      a(href='#') New Year Campaign
-                      span.timestamp 7 hours ago
+                      | First login at
+                      a #{user.FirstLogin}
+                      span.timeago.timestamp(datetime='#{user.FirstLogin}')
                   li
                     i.fa.fa-plus.activity-icon
-                    p
-                      | Added 
-                      a(href='#') Martin
-                      |  and 
-                      a(href='#') 3 others colleagues
-                      |  to project repository 
-                      span.timestamp Yesterday
+                    if user.IsVerified == true
+                      p
+                        | Account has been verified at #{user.VerifiedAt}
+                        span.timeago.timestamp(datetime='#{user.VerifiedAt}')
+                    else
+                      p
+                        | Your account haven't been confirmed. Please check your email to verify this account
                   li
                     i.fa.fa-check.activity-icon
                     p
-                      | Finished 80% of all 
+                      | Joined on #{user.CreatedAt} 
                       a(href='#') assigned tasks
-                      span.timestamp 1 day ago
+                      span.timeago.timestamp(datetime='#{user.CreatedAt}')
                 .margin-top-30.text-center
-                  a.btn.btn-default(href='#') See all activity
             // END TABBED CONTENT
           // END RIGHT COLUMN
   // END MAIN CONTENT
