fix views and fix routes and fix sysinfo handle methods

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -427,6 +427,7 @@ html.fullscreen-bg #wrapper {
     height: 10px;
     content: '';
     margin-right: 8px;
+    text-overflow: ellipsis;
 }
 
 ul.notifications>li {
