Added register views

--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -47,5 +47,6 @@ html
     script(src='../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
     script(src='../public/vendor/chartist/js/chartist.min.js')
     script(src='../public/js/common.js')
+    script(src="../public/vendor/jquery.steps/jquery.steps.min.js")
 
     block scripts
