Edited UI Register

--- a/views/register.pug
+++ b/views/register.pug
@@ -37,10 +37,10 @@ html(lang='en')
                       i.fa.fa-user
                   .form-bottom
                     .form-group
-                      label.sr-only(for='form-fullname') First name
+                      label(for='form-fullname') First name
                       input#form-fullname.form-fullname.form-control(type='text', name='form-fullname', placeholder='Full name...')
                     .form-group
-                      label.sr-only(for='form-about-yourself') About yourself
+                      label(for='form-about-yourself') About yourself
                       textarea#form-about-yourself.form-about-yourself.form-control(name='form-about-yourself', placeholder='About yourself...')
                     button.btn.btn-next(type='button') Next
                 fieldset
@@ -52,13 +52,13 @@ html(lang='en')
                       i.fa.fa-key
                   .form-bottom
                     .form-group
-                      label.sr-only(for='form-email') Email
+                      label(for='form-email') Email
                       input#form-email.form-email.form-control(type='text', name='form-email', placeholder='Email...')
                     .form-group
-                      label.sr-only(for='form-password') Password
+                      label(for='form-password') Password
                       input#form-password.form-password.form-control(type='password', name='form-password', placeholder='Password...')
                     .form-group
-                      label.sr-only(for='form-repeat-password') Repeat password
+                      label(for='form-repeat-password') Repeat password
                       input#form-repeat-password.form-repeat-password.form-control(type='password', name='form-repeat-password', placeholder='Repeat password...')
                     button.btn.btn-previous(type='button') Previous
                     button.btn(type='submit') Sign me up!
