Added validate password

--- a/views/register.pug
+++ b/views/register.pug
@@ -37,7 +37,7 @@ html(lang='en')
                       i.fa.fa-user
                   .form-bottom
                     .form-group
-                      label(for='form-fullname') First name
+                      label(for='form-fullname') Full name
                       input#form-fullname.form-fullname.form-control(type='text', name='form-fullname', placeholder='Full name...')
                     .form-group
                       label(for='form-about-yourself') About yourself
