--- a/views/register.pug
+++ b/views/register.pug
@@ -4,7 +4,7 @@ html(lang='en')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Bootstrap Multi Step Registration Form Template
+    title #{title} | Raspberry Pi Monitor System
     // CSS
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500')
     link(rel='stylesheet', href='../public/stylesheets/bootstrap.min.css')
