Added input username form

--- a/views/register.pug
+++ b/views/register.pug
@@ -57,6 +57,9 @@ html(lang='en')
                       label(for='form-email') Email
                       input#form-email.form-email.form-control(type='text', name='form-email', placeholder='Email...')
                     .form-group
+                      label(for='form-username') Username
+                      input#form-username.form-username.form-control(type='text', name='form-username', placeholder='Username...')
+                    .form-group
                       label(for='form-password') Password
                       input#form-password.form-password.form-control(type='password', name='form-password', placeholder='Password...')
                     .form-group
